# nf4s

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  msbuild!.bat  msbuild.bat  nf4s.sln  nf4s.workspace  z.bat
DBS/: Project.~dp  Project1.dof  Project1.dpr  Project1.~dp  SIRDBS.SAV  SPANS.SAV  SirDBS.dcu  SirDBS.pas  SirDBS.~pa  SirMath.pas  SirMath.~pa  Sirmath.dcu  Spans.~pa  Unit1.dcu  Unit1.dfm  Unit1.pas  Unit1.~pa  Unit2.dcu  Unit2.dfm  Unit2.pas  Unit2.~df
JOB95/: $$$.Lst  $Auto.Kol  $Db.pas  01.DBS  01.J01  01.Kol  1.J01  1.LST  1.~LS  2.J01  2.Kol  2.Lst  3.J01  3.Lst  AUTO2000.exe.x  About.dfm  About.pas  About.~df  Both.DBS  Both.J01  Both.Lst  CLD.pas  CLD.~pa  Db.dfm  DbPropD.dfm  DbPropD.pas  DbPropD.~pa  Dbf.~df  Dbf.~pa  DbfNil.~pa  DbsCld.dof  DbsCld.dpr  DbsCld.dsk  DbsCld.res  DbsCld.~dp  DbsProps.dcu  DbsProps.dfm  DbsProps.pas  DbsProps.~df  DbsProps.~pa  (+96 more)
dbs/: !stdafx.h  CMakeLists.txt  Dbs.h  ReadMe.txt  algomate.cpp  bounds.cpp  bulge.cpp  dbs.cbp  dbs.cpp  dbs.depend  dbs.layout  dbs.vcxproj  dbs.vcxproj.filters  dbsRead.cpp  dxf.cpp  iDbs.h  json.cpp  kol.cpp  o2.cpp  path.cpp  r26.cpp  read.cpp  span.cpp  stdafx.cpp  stdafx.h  write.cpp  yaml.cpp
dbs2json/: !stdafx.h  CMakeLists.txt  ReadMe.txt  dbs2json.cbp  dbs2json.cpp  dbs2json.vcxproj  dbs2json.vcxproj.filters  stdafx.cpp
doc/: readme.md
dxf/: $$$.DBS  4330-2-2.dbs  4330-2-2.dbs.txt  4330-2-2.dxf  DbsCreate.dbs  DbsCreate.dof  DbsCreate.dpr  DbsCreate.dsk  DbsCreate.exe.bak  DbsCreate.txt  DbsCreate.~dp  DbsCreate.~tx  DbsCreate1.txt  DbsCreate1.~tx  Dxf.dcu  (+33 more)
(+442 files in other folders)
